<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#160099" >

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="@string/verHome"
                 android:src="@drawable/ic_home" />
             
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/cambiarPeso"
                android:src="@drawable/ic_options" />

           <ImageView
               android:id="@+id/imageView3"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:onClick="@string/verAyuda"
               android:src="@drawable/ic_help3" />

        </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" >

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="@string/app_name"
                 android:textSize="@dimen/padding_large"
                 android:textStyle="bold" />

         </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="4" >




             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical" >


                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:orientation="vertical" >

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="1">

                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:onClick="@string/verRutina"
                             android:orientation="vertical" >

                             <ImageView
                                 android:id="@+id/imageView6"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="3"
                                 android:src="@drawable/ic_launcher_run" />

                             <TextView
                                 android:id="@+id/textView3"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center_vertical|center_horizontal"
                                 android:text="@string/sRutinas" />

                         </LinearLayout>

                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:onClick="@string/verHConsulta"
                             android:orientation="vertical" >

                             <ImageView
                                 android:id="@+id/imageView7"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="3"
                                 android:src="@drawable/ic_launcher_stadist" />

                             <TextView
                                 android:id="@+id/textView4"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center_vertical|center_horizontal"
                                 android:text="@string/hRevisar" />

                         </LinearLayout>

                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1" >

                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:onClick="@string/cambiarPeso"
                             android:orientation="vertical" >

                             <ImageView
                                 android:id="@+id/imageView8"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="3"
                                 android:src="@drawable/ic_launcher_settings" />

                             <TextView
                                 android:id="@+id/textView5"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center_vertical|center_horizontal"
                                 android:text="@string/ePeso" />

                         </LinearLayout>

                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:orientation="vertical" >

                             <ImageView
                                 android:id="@+id/imageView9"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="3"
                                 android:src="@drawable/ic_help_green2" />

                             <TextView
                                 android:id="@+id/textView6"
                                 android:layout_width="fill_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:gravity="center_vertical|center_horizontal"
                                 android:text="@string/ayuda" />

                         </LinearLayout>

                     </LinearLayout>

                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp" 
                     android:layout_weight="1"
                     android:orientation="vertical">

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="1">

                         <TextView
                             android:id="@+id/textView7"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="bottom|right"
                             android:text="@string/imc" />

                         <TextView
                             android:id="@+id/imc"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="bottom|left"
                             android:text="TextView" />

                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="1">

                         <TextView
                             android:id="@+id/textView9"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="right|center_vertical"
                             android:text="@string/clasificacion" />

                         <TextView
                             android:id="@+id/clas"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="left|center_vertical"
                             android:text="TextView" />

                     </LinearLayout>

                 </LinearLayout>

             </LinearLayout>

         </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" ><TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/aboutUs"
                android:textStyle="bold" />

         </LinearLayout>
        
    </LinearLayout>
    
</RelativeLayout>