<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#160099" >

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="@string/verHome"
                 android:src="@drawable/ic_home" />
             
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/cambiarPeso"
                android:src="@drawable/ic_options" />

           <ImageView
               android:id="@+id/imageView3"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:onClick="@string/verAyuda"
               android:src="@drawable/ic_help3" />

        </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" >

             <TextView
                 android:id="@+id/titulo"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="@string/ePeso"
                 android:textSize="@dimen/padding_large"
                 android:textStyle="bold" />

         </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="4" >




             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical" >


                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3" 
                     android:orientation="vertical" >

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1" >

                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/peso" />

                         <EditText
                             android:id="@+id/peso"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             
                             android:ems="10"
                             android:inputType="numberDecimal" >

                             <requestFocus />
                         </EditText>

                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp"
                          android:layout_weight="1"  >

                         <TextView
                             android:id="@+id/textView4"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/talla" />

                         <EditText
                             android:id="@+id/talla"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:ems="10"
                             android:inputType="numberDecimal" />

                     </LinearLayout>
                     
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp"
                          android:layout_weight="1"  >

                         <TextView
                             android:id="@+id/textView5"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/sexo" />

                         <Spinner
                             android:id="@+id/sexo"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1" />

                     </LinearLayout>
                     
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp"
                          android:layout_weight="1"  >

                         <TextView
                             android:id="@+id/textView6"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/edad" />

                         <EditText
                             android:id="@+id/edad"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1"
                             android:ems="10"
                             android:inputType="numberDecimal" />

                     </LinearLayout>

                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp" 
                     android:layout_weight="1">

                     <ImageView
                         android:id="@+id/guardarOP"
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:onClick="@string/guardarOpciones"
                         android:src="@drawable/ic_launcher_save" />

                 </LinearLayout>

             </LinearLayout>

         </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" ><TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/aboutUs"
                android:textStyle="bold" />

         </LinearLayout>
        
    </LinearLayout>
    
</RelativeLayout>