<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#160099" >

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:onClick="@string/verHome"
                 android:src="@drawable/ic_home" />
             
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="@string/cambiarPeso"
                android:src="@drawable/ic_options" />

           <ImageView
               android:id="@+id/imageView3"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:onClick="@string/verAyuda"
               android:src="@drawable/ic_help3" />

        </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" >

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="@string/lActividades"
                 android:textSize="@dimen/padding_large"
                 android:textStyle="bold" />

         </LinearLayout>




         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="4" >




             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical" >


                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:orientation="vertical" >

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="3"
                         android:orientation="vertical">
                         
                         <ListView android:id="@+id/android:list" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:layout_weight="1"
							android:stackFromBottom="false" android:transcriptMode="normal" />

                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="0dp" 
                         android:layout_weight="1">

                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/calPerdidas" />

                         <TextView
                             android:id="@+id/textView4"
                             android:layout_width="0dp"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:gravity="left|center_vertical"
                             android:text="TextView" />

                     </LinearLayout>

                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp" 
                     android:layout_weight="1">





                     <ImageView
                         android:id="@+id/imageView5"
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="1"
                         android:src="@drawable/ic_launcher_back" />

                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:onClick="@string/guardarActividades"
                         android:src="@drawable/ic_launcher_save" />

                 </LinearLayout>

             </LinearLayout>

         </LinearLayout>



</LinearLayout>
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7" ><TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/aboutUs"
                android:textStyle="bold" />

         </LinearLayout>
        
    
</LinearLayout>
    
</RelativeLayout>